# ipfs-car

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-and-release.yml
src/: encoding.rs  lib.rs  reader.rs  types.rs  writer.rs
